Bug 604455 reduce calling unnecessary KeyScript() API r=smichaud, a=blocking.13+